<resources>
    <string name="app_name">Combustible</string>
    <string name="recommended_instance" translatable="false">&recommended_instance;</string>
    <string name="testing_instance" translatable="false">https://voyager.lemmy.ml</string>
    <string name="preference_file_key" translatable="false">com.thebrokenrail.combustible.PREFERENCE_FILE_KEY</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="share">Share</string>
    <string name="overflow">Overflow Menu</string>
    <string name="unknown_error">An unknown error has occurred!</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="edit">Edit</string>
    <string name="reply">Reply</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="restore">Restore</string>
    <string name="distinguish">Distinguish</string>
    <string name="undistinguish">Undistinguish</string>
    <string name="pin_community">Pin To Community</string>
    <string name="unpin_community">Unpin From Community</string>
    <string name="pin_instance">Pin To Instance</string>
    <string name="unpin_instance">Unpin From Instance</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="copy_text">Copy Text</string>
    <string name="welcome_title">Welcome to Combustible!</string>
    <string name="welcome_explanation">Combustible is an app that allows you to interact with the <a href="https://join-lemmy.org/">Lemmy</a> link aggregation and discussion platform. Lemmy is completely free and open, and not controlled by any company.\n\nHowever, to interact to Lemmy you must select an instance to connect to. Don\'t worry, you can access most content on Lemmy from any instance and you can change this later.\n\nThe <a href="&recommended_instance;">&recommended_instance;</a> instance is recommended, but you can discover other instances on <a href="https://join-lemmy.org/instances">Lemmy\'s official website</a>.</string>
    <string name="welcome_instance_recommended">Recommended Instance</string>
    <string name="welcome_instance_testing">Testing Instance</string>
    <string name="welcome_instance_custom">Custom Instance</string>
    <string name="welcome_go">Go!</string>
    <string name="welcome_error">Unable to connect to specified Lemmy instance!</string>
    <string name="feed_loading">Loading…</string>
    <string name="feed_open_menu">Open Menu</string>
    <string name="feed_refresh">Refresh</string>
    <string name="feed_menu_login">Login</string>
    <string name="feed_menu_view_profile">View Profile</string>
    <string name="feed_menu_logout">Logout</string>
    <string name="feed_menu_app_settings">App Settings</string>
    <string name="feed_menu_user_settings">User Settings</string>
    <string name="feed_menu_register">Register</string>
    <string name="feed_menu_saved">Saved</string>
    <string name="feed_menu_community_info">Community Information</string>
    <string name="feed_menu_legal_info">Legal Information</string>
    <string name="feed_menu_block_community">Block Community</string>
    <string name="feed_menu_unblock_community">Unblock Community</string>
    <string name="feed_menu_blocked">Blocked</string>
    <string name="feed_menu_inbox">Inbox</string>
    <string name="feed_error">Unable to load data!</string>
    <string name="feed_retry">Retry</string>
    <string name="posts">Posts</string>
    <string name="posts_home">Home</string>
    <string name="posts_sort_by">Sort By</string>
    <string name="posts_listing_type">Show</string>
    <string name="post_creator_community_spacer">on</string>
    <string name="post_community_time_spacer">•</string>
    <string name="settings_general">General</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_media">Media</string>
    <string name="settings_security">Security</string>
    <string name="settings_links">Links</string>
    <string name="settings_about">About</string>
    <string name="app_settings_dark_mode">Dark Mode</string>
    <string name="app_settings_disable_images">Disable Images</string>
    <string name="app_settings_disable_large_thumbnail">Disable Large Thumbnails</string>
    <string name="app_settings_disable_markdown_images">Disable Markdown Images</string>
    <string name="app_settings_use_custom_tabs">Use Custom Tabs</string>
    <string name="app_settings_use_incognito_mode">Use Incognito Mode</string>
    <string name="app_settings_use_incognito_mode_description">This is not supported by all browsers.</string>
    <string name="app_settings_change_instance">Lemmy Instance</string>
    <string name="app_settings_clear_search_history">Clear Search History</string>
    <string name="app_settings_version">App Version</string>
    <string name="app_settings_licenses">Open Source Licenses</string>
    <string name="user_settings_display_name">Display Name</string>
    <string name="user_settings_bio">Biography</string>
    <string name="user_settings_matrix_user_id">Matrix User</string>
    <string name="user_settings_default_listing_type">Default Listing Type</string>
    <string name="user_settings_default_sort_type">Default Sort Type</string>
    <string name="user_settings_show_nsfw">Show NSFW Content</string>
    <string name="user_settings_blur_nsfw">Blur NSFW Content</string>
    <string name="user_settings_show_scores">Show Scores</string>
    <string name="user_settings_show_avatars">Show Avatars</string>
    <string name="user_settings_bot_account">Bot Account</string>
    <string name="user_settings_show_bot_accounts">Show Bot Accounts</string>
    <string name="user_settings_show_read_posts">Show Read Posts</string>
    <string name="user_settings_show_new_post_notifs">Show Notifications For New Posts</string>
    <string name="user_settings_send_notifications_to_email">Email Notifications</string>
    <string name="user_settings_verification_email_sent">A verification email has been sent.</string>
    <string name="user_settings_upload_avatar">Upload Avatar</string>
    <string name="user_settings_remove_avatar">Remove Avatar</string>
    <string name="user_settings_upload_banner">Upload Banner</string>
    <string name="user_settings_remove_banner">Remove Banner</string>
    <string name="user_settings_change_password">Change Password</string>
    <string name="user_settings_totp_enable">Enable 2FA</string>
    <string name="user_settings_totp_disable">Disable 2FA</string>
    <string name="user_settings_totp_url">Open 2FA Setup URL</string>
    <string name="user_settings_delete_account">Delete Account</string>
    <string name="user_settings_saved">Saved!</string>
    <string name="login_username">Email Or Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_error">Invalid username and/or password!</string>
    <string name="login_password_recovery">Password Recovery</string>
    <string name="login_password_recovery_hint">Email</string>
    <string name="login_password_recovery_success">An email has been sent with password reset instructions.</string>
    <string name="login_password_recovery_failure">Unable to send password reset email!</string>
    <string name="login_totp_token">2FA Required</string>
    <string name="login_totp_token_hint">2FA Code</string>
    <string name="icon_pinned">Pinned</string>
    <string name="icon_locked">Locked</string>
    <string name="icon_deleted">Deleted</string>
    <string name="icon_nsfw">NSFW</string>
    <string name="icon_distinguished">Distinguished</string>
    <string name="icon_unread">Unread</string>
    <string name="comments">Comments</string>
    <string name="comment_show_more">Show More Comments</string>
    <string name="comments_view_post">View Post</string>
    <string name="comments_view_comment">View Comment</string>
    <string name="comment_view_all">View All Comments</string>
    <string name="view_image_download">Download</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Lemmy</string>
    <string name="communities">Communities</string>
    <string name="users">Users</string>
    <string name="change_password_old">Old Password</string>
    <string name="change_password_new">New Password</string>
    <string name="change_password_new_verify">Verify Password</string>
    <string name="change_password_match_error">Does Not Match</string>
    <string name="change_password_error">Unable to change password!</string>
    <string name="delete_account_error">Unable to delete account!</string>
    <string name="report">Report</string>
    <string name="report_hint">Reason</string>
    <string name="report_error">Unable to submit report!</string>
    <string name="report_success">Submitted report!</string>
    <string name="create_post">Create Post</string>
    <string name="create_post_title">Title</string>
    <string name="create_post_url">URL</string>
    <string name="create_post_url_button">Upload Image</string>
    <string name="create_post_body">Body</string>
    <string name="create_post_go">Go</string>
    <string name="edit_post">Edit Post</string>
    <string name="create_comment_content">Content</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="inbox_replies">Replies</string>
    <string name="inbox_mentions">Mentions</string>
    <string name="inbox_private_messages">Private Messages</string>
    <string name="inbox_mark_all_as_read">Mark All As Read</string>
    <string name="private_message">Private Message</string>
    <string name="private_message_hint">Message</string>
    <string name="private_message_success">Sent private message!</string>
    <string name="private_message_error">Unable to send private message!</string>
    <string name="user_block">Block User</string>
    <string name="user_unblock">Unblock User</string>
    <string name="user_moderates_communities">Moderates</string>
    <string name="user_subscribed_communities">Subscribed</string>
    <string name="user_about">About</string>
    <string name="user_about_biography">## Biography</string>
    <string name="user_about_karma">## Karma</string>
    <string name="user_about_karma_total">- **Total:** %,d</string>
    <string name="user_about_karma_post">- **Post:** %,d</string>
    <string name="user_about_karma_comment">- **Comment:** %,d</string>
    <string name="user_about_account">## Account</string>
    <string name="user_about_account_matrix_user">- **Matrix User:** [%1$s](https://matrix.to/#/%1$s)</string>
    <string name="user_about_account_cake_day">- **Cake Day:** %s</string>
    <string name="counts_users">- **Users:** %,d</string>
    <string name="counts_subscribers">- **Subscribers:** %,d</string>
    <string name="counts_users_per_day">- **Users Per Day:** %,d</string>
    <string name="counts_users_per_week">- **Users Per Week:** %,d</string>
    <string name="counts_users_per_month">- **Users Per Month:** %,d</string>
    <string name="counts_users_per_six_months">- **Users Per Six Months:** %,d</string>
    <string name="counts_posts">- **Posts:** %,d</string>
    <string name="counts_comments">- **Comments:** %,d</string>
    <string name="info_header_counts">## Statistics</string>
    <string name="info_header_description">## Description</string>
</resources>