<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/post_share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share" />

    <item
        android:id="@+id/post_save"
        android:icon="@drawable/baseline_bookmark_border_24"
        android:title="@string/save" />

    <item
        android:id="@+id/post_edit"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/edit" />

    <item
        android:id="@+id/post_distinguish"
        android:icon="@drawable/baseline_mic_24"
        android:title="@string/distinguish"
        android:visible="false" />

    <item
        android:id="@+id/post_lock"
        android:icon="@drawable/baseline_lock_24"
        android:title="@string/lock"
        android:visible="false" />

    <item
        android:id="@+id/post_pin_community"
        android:icon="@drawable/baseline_push_pin_24"
        android:title="@string/pin_community"
        android:visible="false" />

    <item
        android:id="@+id/post_pin_instance"
        android:icon="@drawable/baseline_push_pin_24"
        android:title="@string/pin_instance"
        android:visible="false" />

    <item
        android:id="@+id/post_delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete" />

    <item
        android:id="@+id/post_remove"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/remove" />

    <item
        android:id="@+id/post_report"
        android:icon="@drawable/baseline_report_24"
        android:title="@string/report" />

</menu>