<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/feed_menu_group_main">

        <item
            android:id="@+id/feed_menu_login"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/feed_menu_login" />

        <item
            android:id="@+id/feed_menu_register"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/feed_menu_register" />

        <item
            android:id="@+id/feed_menu_view_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/feed_menu_view_profile" />

        <item
            android:id="@+id/feed_menu_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/feed_menu_logout" />

    </group>

    <group android:id="@+id/feed_menu_group_saved">

        <item
            android:id="@+id/feed_menu_saved"
            android:icon="@drawable/baseline_bookmark_24"
            android:title="@string/feed_menu_saved" />

        <item
            android:id="@+id/feed_menu_inbox"
            android:icon="@drawable/baseline_inbox_24"
            android:title="@string/feed_menu_inbox" />

        <item
            android:id="@+id/feed_menu_blocked"
            android:icon="@drawable/baseline_block_24"
            android:title="@string/feed_menu_blocked" />

    </group>

    <group android:id="@+id/feed_menu_group_block">

        <item
            android:id="@+id/feed_menu_block_community"
            android:icon="@drawable/baseline_block_24"
            android:title="@string/feed_menu_block_community" />

    </group>

    <group android:id="@+id/feed_menu_group_information">

        <item
            android:id="@+id/feed_menu_community_info"
            android:icon="@drawable/outline_info_24"
            android:title="@string/feed_menu_community_info" />

        <item
            android:id="@+id/feed_menu_legal_info"
            android:icon="@drawable/outline_info_24"
            android:title="@string/feed_menu_legal_info" />

    </group>

    <group android:id="@+id/feed_menu_group_settings">

        <item
            android:id="@+id/feed_menu_app_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/feed_menu_app_settings" />

        <item
            android:id="@+id/feed_menu_user_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/feed_menu_user_settings" />

    </group>

</menu>