<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/feed_share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feed_refresh"
        android:icon="@drawable/baseline_refresh_24"
        android:title="@string/feed_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feed_open_menu"
        android:icon="@drawable/baseline_menu_24"
        android:title="@string/feed_open_menu"
        app:showAsAction="always" />

</menu>