<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/feed_share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feed_refresh"
        android:icon="@drawable/baseline_refresh_24"
        android:title="@string/feed_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feed_mark_all_as_read"
        android:icon="@drawable/baseline_mark_email_read_24"
        android:title="@string/inbox_mark_all_as_read"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feed_private_message"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/private_message"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feed_block_user"
        android:icon="@drawable/baseline_block_24"
        android:title="@string/post_block_user"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>