<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.fullscreen.WelcomeActivity"
    android:baselineAligned="false"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textSize="@dimen/welcome_title_font_size"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/welcome_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_explanation"
                android:textAlignment="center" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/welcome_instance_recommended"
                android:gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/welcome_instance_recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_instance_recommended" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_instance_custom" />

            </RadioGroup>

            <Button
                android:id="@+id/welcome_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_go" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>