<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/icon_deleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/post_padding"
        android:contentDescription="@string/icon_deleted"
        app:srcCompat="@drawable/baseline_delete_18" />

    <ImageView
        android:id="@+id/icon_locked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/post_padding"
        android:contentDescription="@string/icon_locked"
        app:srcCompat="@drawable/baseline_lock_18" />

    <ImageView
        android:id="@+id/icon_pinned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/post_padding"
        android:contentDescription="@string/icon_pinned"
        app:srcCompat="@drawable/baseline_push_pin_18" />

</LinearLayout>