<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_post_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/create_post_scroll">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_close_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/create_post_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="?dialogPreferredPadding"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_post_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_title"
                android:layout_marginBottom="?dialogPreferredPadding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_post_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences|textAutoCorrect"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_post_url_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_url"
                android:layout_marginBottom="?dialogPreferredPadding"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/baseline_image_24"
                app:endIconContentDescription="@string/create_post_url_button">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_post_url_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_post_body_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_body"
                android:layout_marginBottom="?dialogPreferredPadding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_post_body_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences|textAutoCorrect" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/create_post_nsfw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_nsfw" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>