<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_change_password_old_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_password_old"
            android:layout_marginTop="?dialogPreferredPadding"
            android:layout_marginBottom="?dialogPreferredPadding"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_change_password_old_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_change_password_new_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_password_new"
            android:layout_marginBottom="?dialogPreferredPadding"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_change_password_new_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_change_password_new_verify_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_password_new_verify"
            android:layout_marginBottom="?dialogPreferredPadding"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_change_password_new_verify_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>